fix(style): pricing widget shadow overlap sibling

--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -49,3 +49,5 @@
 // Icon
 .icon-mid:before { vertical-align: middle; }
 
+// Z Index
+.z-1 { z-index: 1 }
