--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -75,7 +75,6 @@
         margin-bottom: 0;
         border-right: 1px  solid $gray-200;
         box-shadow: 0 10px 10px $gray-200;
-        margin-bottom: .5rem;
     }
     h1 {
         text-align: center;
